# EasyCipher

./: LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/io/easycipher/: MainActivity.java
app/src/main/java/io/easycipher/test/: AESTest.java  DefaultAES.java  Digest.java  EccTest.java  EfficiencyTest.java  HexUtil.java  RSATest.java  RandomUtil.java  SHATest.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
easycipher/: build.gradle  proguard-rules.pro
easycipher/src/main/: AndroidManifest.xml
easycipher/src/main/cpp/: CMakeLists.txt  aes_cbc.c  aes_cbc.h  easy_cipher.cpp  ecc.c  ecc.h  hmac_sha256.c  hmac_sha256.h  random.c  random.h  rsa.c  rsa.h  sha256.c  sha256.h
easycipher/src/main/java/io/easycipher/: Cipher.java  ECCKey.java  EasyAES.java  EasyECC.java  EasyRSA.java  EasySHA.java  RSAKey.java
gradle/wrapper/: gradle-wrapper.properties
